# rs-pico-test

./: Cargo.toml
src/: main.rs
